# axiom

./: .gitignore  Axiomite.toml  Cargo.toml  INFO.txt  README.md
axiom/: Cargo.toml  build.rs
axiom/src/: build_system.rs  bytecode.rs  checker.rs  chk.rs  compiler.rs  conf.rs  diagnostics.rs  errors.rs  fmt.rs  gc.rs  intrinsics.rs  jit.rs  lexer.rs  lib.rs  loader.rs  main.rs  module_loader.rs  parser.rs  pkg.rs  profiler.rs  runtime.rs  vm_core.rs
axiom/src/core/: mod.rs  oop.rs
axiom/tests/: integration_closures.rs
axm/: Cargo.toml  build.rs
axm/src/: ast.rs  build_system.rs  bytecode.rs  chk.rs  compiler.rs  errors.rs  inline_cache.rs  intrinsics.rs  lexer.rs  lib.rs  main.rs  module_loader.rs  nanbox.rs  optimizer.rs  parser.lalrpop  parser.rs  pkg.rs  profiler.rs  runtime.rs  vm.rs  vm_core.rs
axm/src/core/: oop.rs  value.rs
docs/: ARCHITECTURE.md  BEFORE_AFTER_ANALYSIS.md  BUILD_AND_DEPLOY.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DELIVERY_CHECKLIST.md  DELIVERY_SUMMARY.md  ERRORS.md  EXAMPLES.md  EXECUTION_CHECKLIST.md  FAQ.md  FINAL_SUMMARY.md  GENESIS.md  GETTING_STARTED.md  INDUSTRIAL_ENGINEERING_RESOLUTION.md  INTRINSIC_MONOLITH.md  LANGUAGE.md  MODULE_REFERENCE.md  MONOLITH_STATUS.md  MONOLITH_STDLIB.md  PROJECT_FILES.md  QUICKSTART.md  README.md  TYPES.md  config-tuning.md  getting-started.md  latest-fixes.md  monolith-intrinsics.md  package-management.md  syntax-ref.md
examples/: fib.ax  func_debug.ax  if.ax  io.ax  match.ax  minimal.ax  out.ax  out_basic.ax  stdlib_demo.ax  test.ax
examples/core/: chdir_example.ax  fib.ax  fib_2.ax  func_call.ax  func_simple.ax  lambdas.ax  simple.ax  test_alg_access.ax  test_builtins.ax  test_globals.ax
examples/loc/: make_pizza.ax  pizza_factory.ax
examples/stdlib/: simpler_demo.ax  stdlib_demo.ax
examples/tests/: test_closures.ax  test_stdlib.ax
examples/user/: axiom_test_demo.ax
local/: fib.py  fib_2.py
tests/errors/: README.md  axm_101.ax  axm_102.ax  axm_103.ax  axm_105.ax  axm_200.ax  axm_201.ax  axm_202.ax  axm_203.ax  axm_401.ax  axm_402.ax  axm_403.ax  axm_404.ax  axm_408.ax  axm_502.ax  axm_601.ax  axm_603_a.ax  axm_603_b.ax
