[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Contributors"]
license = "MIT"
repository = "https://github.com/axiom-lang/axiom"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
rowan = "0.15"
logos = "0.13"
lalrpop-util = "0.20"
dirs = "5"

# Logic tier
async-recursion = "1.0"
arc-swap = "1"
parking_lot = "0.12"
colored = "2.1"
toml = "0.8"
lazy_static = "1.4"
git2 = "0.20"
camino = "1.1"
crossbeam = "0.8"
crossterm = "0.27"

# Math & Algorithms
ndarray = { version = "0.15", features = ["serde"] }
petgraph = "0.6"
rayon = "1.7"
regex = "1.10"
unicode-segmentation = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Data & Serialization
polars = { version = "0.20", features = ["lazy"] }
csv = "1.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.18"
walkdir = "2.4"
dotenvy = "0.15"

# System & Operations
sysinfo = "0.30"
indicatif = "0.17"
plotters = "0.3"
croner = "1.0"
notify = "6.1"
rusb = "0.9"

# Utilities
once_cell = "1.19"
anyhow = "1.0"
semver = { version = "1.0", features = ["serde"] }

# TUI — single canonical version (crossterm backend)
ratatui = { version = "0.27", features = ["crossterm"] }
crossterm = "0.27"  # Explicit import - not re-exported by ratatui 0.27
# tachyonfx shader descriptors are pure map values (no crate import needed)

# USB support (Module 24)
rusb = "0.9"

[lib]
name = "axiom"
path = "src/lib.rs"

[[bin]]
name = "axiom"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
